feat: logo and disabled buttons

--- a/website/index.html
+++ b/website/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="content-type" content="text/html;charset=utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no">
-    <link rel="icon" type="image/png" href="assets/images/3dviewer_net_favicon.ico">
+    <link rel="icon" type="image/png" href="assets/images/3dviewer_logo.png">
     <link rel="canonical" href="https://3dviewer.net">
 
     <title>Online 3D Viewer</title>
@@ -45,7 +45,8 @@
         <div class="title">
             <div class="title_left">
                 <a href="index.html">
-                    <svg class="logo_image"><use href="assets/images/3dviewer_net_logo_text.svg#logo"></use></svg>
+                    <img class="logo_image" src="assets/images/3dviewer_logo.png" alt="logo" />
+                    <div class="logo_image_text">ONLINE 3D VIEWER</div>
                 </a>
             </div>
             <div class="title_right" id="header_buttons"></div>
@@ -67,30 +68,33 @@
     <div class="intro ov_thin_scrollbar" id="intro">
         <div class="intro_content" id="intro_content">
             <div class="intro_logo">
-                <svg class="intro_logo"><use href="assets/images/3dviewer_net_logo_text.svg#logo"></use></svg>
+                <div class="intro_logo_container">
+                    <img class="intro_logo" src="assets/images/3dviewer_logo.png" alt="logo" />
+                    <div class="intro_logo_text">ONLINE 3D VIEWER</div>
+                </div>
                 <div class="intro_dragdrop_text" id="intro_dragdrop_text"></div>
             </div>
             <div class="intro_formats">
                 <div class="intro_formats_title" id="intro_formats_title"></div>
                 <div class="intro_file_formats">
-                    <a href="#model=assets/models/RhinoLogo.3dm">3dm</a>
-                    <a href="#model=assets/models/cubes.3ds,assets/models/texture.png">3ds</a>
-                    <a href="#model=assets/models/rhombicuboctahedron.3mf">3mf</a>
-                    <a href="#model=assets/models/rook.amf">amf</a>
-                    <a href="#model=assets/models/MultipleMeshes.bim">bim</a>
-                    <a href="#model=assets/models/as1_pe_203.brep">brep</a>
-                    <a href="#model=assets/models/X_Bot.dae">dae</a>
-                    <a href="#model=assets/models/Y_Bot.fbx">fbx</a>
-                    <a href="#model=assets/models/ArchDetail.FCStd">fcstd</a>
-                    <a href="#model=assets/models/DamagedHelmet.glb">gltf</a>
-                    <a href="#model=assets/models/haus.ifc">ifc</a>
-                    <a href="#model=assets/models/as1_pe_203.igs">iges</a>
-                    <a href="#model=assets/models/as1_pe_203.stp">step</a>
-                    <a href="#model=assets/models/utah_teapot.stl">stl</a>
-                    <a href="#model=assets/models/solids.obj,assets/models/solids.mtl">obj</a>
-                    <a href="#model=assets/models/cube.off">off</a>
-                    <a href="#model=assets/models/cow.ply">ply</a>
-                    <a href="#model=assets/models/extrusion3.wrl">wrl</a>
+                    <a>3dm</a>
+                    <a>3ds</a>
+                    <a>3mf</a>
+                    <a>amf</a>
+                    <a>bim</a>
+                    <a>brep</a>
+                    <a>dae</a>
+                    <a>fbx</a>
+                    <a>fcstd</a>
+                    <a>gltf</a>
+                    <a>ifc</a>
+                    <a>iges</a>
+                    <a>step</a>
+                    <a>stl</a>
+                    <a>obj</a>
+                    <a>off</a>
+                    <a>ply</a>
+                    <a>wrl</a>
                 </div>
             </div>
             <!-- intro footer start -->
