style: main img and logo

--- a/website/index.html
+++ b/website/index.html
@@ -67,36 +67,42 @@
     </div>
     <div class="intro ov_thin_scrollbar" id="intro">
         <div class="intro_content" id="intro_content">
-            <div class="intro_logo">
-                <div class="intro_logo_container">
-                    <img class="intro_logo" src="assets/images/3dviewer_logo.png" alt="logo" />
-                    <div class="intro_logo_text">ONLINE 3D VIEWER</div>
-                </div>
-                <div class="intro_dragdrop_text" id="intro_dragdrop_text"></div>
+            <div class="intro_container_image" >
+                <img class="intro_main_image" src="assets/images/3dviewer_main.png" alt="main" />
             </div>
-            <div class="intro_formats">
-                <div class="intro_formats_title" id="intro_formats_title"></div>
-                <div class="intro_file_formats">
-                    <a>3dm</a>
-                    <a>3ds</a>
-                    <a>3mf</a>
-                    <a>amf</a>
-                    <a>bim</a>
-                    <a>brep</a>
-                    <a>dae</a>
-                    <a>fbx</a>
-                    <a>fcstd</a>
-                    <a>gltf</a>
-                    <a>ifc</a>
-                    <a>iges</a>
-                    <a>step</a>
-                    <a>stl</a>
-                    <a>obj</a>
-                    <a>off</a>
-                    <a>ply</a>
-                    <a>wrl</a>
+            <div class="intro_container">
+                <div class="intro_logo">
+                    <div class="intro_logo_container">
+                        <img class="intro_logo" src="assets/images/3dviewer_logo.png" alt="logo" />
+                        <div class="intro_logo_text">ONLINE 3D VIEWER</div>
+                    </div>
+                    <div class="intro_dragdrop_text" id="intro_dragdrop_text"></div>
+                </div>
+                <div class="intro_formats">
+                    <div class="intro_formats_title" id="intro_formats_title"></div>
+                    <div class="intro_file_formats">
+                        <a>3dm</a>
+                        <a>3ds</a>
+                        <a>3mf</a>
+                        <a>amf</a>
+                        <a>bim</a>
+                        <a>brep</a>
+                        <a>dae</a>
+                        <a>fbx</a>
+                        <a>fcstd</a>
+                        <a>gltf</a>
+                        <a>ifc</a>
+                        <a>iges</a>
+                        <a>step</a>
+                        <a>stl</a>
+                        <a>obj</a>
+                        <a>off</a>
+                        <a>ply</a>
+                        <a>wrl</a>
+                    </div>
                 </div>
             </div>
+
             <!-- intro footer start -->
             <!-- intro footer end -->
         </div>
